logo trocada (testes)

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!--Sistema criado por - Ruan Max Nunes Bertoldo.  Matrícula : 01803011-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +12,7 @@
     <main>
         <div id="pag">
             <div id="cabecalho">
-                <img id="logo" src="logo.jpeg" alt="...">
+                <img id="logo" src="MaxPay-Grande(fundoPreto).png" alt="...">
             </div>
             <header>
                 <h1>Olá, Seja bem vindo(a) à MaxPay!</h1><br>
