--- a/index.html
+++ b/index.html
@@ -1,27 +1,49 @@
 <!--Sistema criado por - Ruan Max Nunes Bertoldo.  Matrícula : 01803011-->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sistema MaxPay para conversão de câmbio rápida, segura e prática">
+    <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="style.css">
     <title>MaxPay</title>
 </head>
 <body>
     <main>
         <div id="pag">
+
             <div id="cabecalho">
-                <img id="logo" src="MaxPay-Grande(fundoPreto).png" alt="...">
+                <header>
+                    <img id="logo" src="MaxPay-Grande(fundoPreto).png" alt="Logo MaxPay">
+                    <!-- Futuro menu lateral -->
+                    <!-- menu antes hamburger-->
+    <div class="menu" id="menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
+    <!-- Menu lateral -->
+    <nav class="lateral" id="lateral">
+        <ul>
+            <li><a href="#">Início</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Serviços</a></li>
+            <li><a href="#">Contato</a></li>
+        </ul>
+    </nav>
+            </header>
             </div>
-            <header>
+
+            <section>
                 <h1>Olá, Seja bem vindo(a) à MaxPay!</h1><br>
                 <h2>
                     Seu sistema de câmbio para conversão rápida,
                     segura e prática.
                 </h2>
-            </header>
-            <section>
+
                 <h3>
                     Oque você deseja?
                 </h3>
@@ -34,5 +56,9 @@
             </section>
         </div>
     </main>
+    <footer id="rodape">
+        <p>Copyright ©2025 • MaxPay | Todos os direitos reservados</p>
+    </footer>
+    <script src="/scripts.js"></script>
 </body>
 </html>
