--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
     <footer id="rodape">
         <p>Copyright ©2025 • MaxPay | Todos os direitos reservados</p>
     </footer>
-    <script src="/scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
