ajustes + adições (login & cadastro)

--- a/cabecalho.html
+++ b/cabecalho.html
@@ -1,4 +1,18 @@
-<header>
-    <img id="logo" src="MaxPay-Grande(fundoPreto).png" alt="Logo MaxPay">
-    <!-- Futuro menu lateral -->
-</header>
+<div id="cabecalho">
+                <header>
+                    <div class="menu" id="menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <img id="logo" src="MaxPay-Grande(fundoPreto).png" alt="Logo MaxPay">
+    <!-- Menu lateral -->
+    <nav class="lateral" id="lateral">
+        <ul>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="services.html">Serviços</a></li>
+            <li><a href="fac.html">Ajuda(FAC)</a></li>
+        </ul>
+    </nav>
+            </header>
+            </div>
