--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
     <!-- Menu lateral -->
     <nav class="lateral" id="lateral">
         <ul>
-            <li><a href="#">Início</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Serviços</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="services.html">Serviços</a></li>
+            <li><a href="fac.html">Ajuda(FAC)</a></li>
         </ul>
     </nav>
             </header>
@@ -45,11 +44,11 @@
                     Oque você deseja?
                 </h3>
                 <br>
-                <a class="botoes" href="#">Entrar</a>
+                <a class="botoes" href="entrar.html">Entrar</a>
                 <h4>
                     ou
                 </h4>
-                <a class="botoes" href="#">Cadastrar</a>
+                <a class="botoes" href="cadastrar.html">Cadastrar</a>
             </section>
         </div>
     </main>
