--- a/principal.html
+++ b/principal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
     <title>MaxPay</title>
 </head>
 <body>
@@ -104,4 +104,5 @@
         </footer>-->
     </main>
 </body>
+
 </html>
