--- a/entrar.html
+++ b/entrar.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sistema MaxPay para conversão de câmbio rápida, segura e prática">
     <meta name="theme-color" content="#000000">
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style.css">
     <title>MaxPay - login</title>
 </head>
 <body>
@@ -38,9 +38,10 @@
                 <h1>Seja bem vindo(a) de volta!</h1><br>
                 <h2>
                     Para continuar sua conexão conosco, Por favor,
-                    isira suas informações de login:
+                    insira suas informações de login:
                 </h2>
                 <fieldset>
+                    <legend>Log-in</legend>
                 <form action="principal.html">
                     <label for="email" class="labels">E-mail:</label><br>
                     <input type="email" class="inputs" name="email" required><br>
