--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="services.html">Serviços</a></li>
-            <li><a href="fac.html">Ajuda(FAC)</a></li>
+            <li><a href="fac.html">Ajuda(FAQ)</a></li>
         </ul>
     </nav>
             </header>
