--- a/cabecalho.html
+++ b/cabecalho.html
@@ -1,18 +1,17 @@
-<div id="cabecalho">
-                <header>
-                    <div class="menu" id="menu">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                    <img id="logo" src="MaxPay-Grande(fundoPreto).png" alt="Logo MaxPay">
-    <!-- Menu lateral -->
-    <nav class="lateral" id="lateral">
-        <ul>
-            <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="services.html">Serviços</a></li>
-            <li><a href="fac.html">Ajuda(FAC)</a></li>
-        </ul>
-    </nav>
-            </header>
-            </div>
+<header>
+  <button class="menu" aria-label="Abrir menu">
+    <span></span>
+    <span></span>
+    <span></span>
+  </button>
+  <img id="logo" src="MaxPay-Grande(fundoPreto).png" alt="Logo MaxPay">
+
+  <nav class="lateral" id="lateral">
+    <ul>
+      <li><a href="index.html">Início</a></li>
+      <li><a href="sobre.html">Sobre</a></li>
+      <li><a href="services.html">Serviços</a></li>
+      <li><a href="fac.html">Ajuda(FAC)</a></li>
+    </ul>
+  </nav>
+</header>
