--- a/principal.html
+++ b/principal.html
@@ -25,9 +25,10 @@
 
       <nav class="lateral" id="lateral">
         <ul>
-          <li><a href="sobre.html">Sobre</a></li>
           <li><a href="services.html">Serviços</a></li>
           <li><a href="fac.html">Ajuda (FAQ)</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="index.html">Sair (Log-out)</a></li>
         </ul>
       </nav>
 
