--- a/rodape.html
+++ b/rodape.html
@@ -1,3 +1,3 @@
-<footer>
-    <p>Copyright ©2025 • MaxPay | Todos os direitos reservados</p>
+<footer id="rodape">
+  <p>Copyright ©2025 • MaxPay | Todos os direitos reservados</p>
 </footer>
