correção de bugs

--- a/paginas/cadastrar.html
+++ b/paginas/cadastrar.html
@@ -68,10 +68,7 @@
                     </form>
                 </fieldset>
 
-                <p>Já possui uma conta?</p>
-
-                <!-- mesma pasta -->
-                <a href="entrar.html" class="botoes">Entrar</a>
+                <p>Já possui uma conta? | <a href="entrar.html" id="cadastrar-login">Entrar</a></p>
             </section>
         </div>
     </main>
@@ -80,7 +77,7 @@
         <p>Copyright ©2025 • MaxPay | Todos os direitos reservados</p>
     </footer>
 
-    <!-- JS: voltar uma pasta -->
+    <script src="../scripts/cadastrar.js"></script>
     <script src="../scripts/scripts.js"></script>
 </body>
 </html>
