--- a/paginas/entrar.html
+++ b/paginas/entrar.html
@@ -60,10 +60,13 @@
                     </form>
                 </fieldset>
 
-                <p>Ainda não possui uma conta?</p>
-
-                <!-- mesma pasta -->
-                <a href="cadastrar.html" class="botoes">Cadastrar-se</a>
+                <div id="link-cadastro&redefinir">
+                    <p>Ainda não possui uma conta?  |<a href="cadastrar.html" id="cadastrar-login">  Cadastrar-se</a></p>
+                </div>
+                <p>ou</p>
+                <div id="link-cadastro$redefinir">
+                    <p>Esqueceu sua senha?  |<a href="cadastrar.html" id="cadastrar-login"> Redefinir Senha</a></p>
+                </div>
             </section>
         </div>
     </main>
