--- a/paginas/pix.html
+++ b/paginas/pix.html
@@ -40,8 +40,9 @@
 
     <div class="topo-painel">
       <div class="perfil-usuario perfil-destaque">
+        <h2 id="bemVindoMsg" style="margin-bottom: 25px;"></h2>
         <p class="tipo-conta">Saldo disponível</p>
-        <h3 id="saldoPrincipal" class="saldo">R$ 1.250,45</h3>
+        <h3 id="saldoPrincipal" class="saldo">R$ 0,00</h3>
       </div>
     </div>
 
@@ -70,7 +71,7 @@
       <a href="historico.html" class="botoes botoes-sec">
         <div class="menu-btn btn-neon">
           <h3 class="titulo-com-icone">
-            <img src="../imagens/icone-historico-pix.png" class="icon-inline">
+            <img src="../imagens/icone-historico.png" class="icon-inline">
             Histórico PIX
           </h3>
           <p>Visualizar transações realizadas via PIX</p>
@@ -94,6 +95,7 @@
 </main>
 
 <script src="../scripts/scripts.js"></script> 
+<script src="../scripts/saldos.js"></script>
 
 <script>
   // Script do menu lateral
