--- a/paginas/pix_receber.html
+++ b/paginas/pix_receber.html
@@ -40,7 +40,7 @@
         </a>
 
         <h2>💵 Receber com PIX</h2>
-        <p>Compartilhe sua chave (.............)</p>
+        <p>Compartilhe sua chave Aleatória (ME00Da00NoTA123DEZ)</p>
         
         <div class="area-receber">
             <p>Receber por QR Code]</p>
