--- a/paginas/principal.html
+++ b/paginas/principal.html
@@ -46,7 +46,7 @@
 
       <div class="perfil-usuario perfil-destaque">
         <img src="../imagens/icone-usuario.png" alt="Usuário" class="foto-usuario">
-        <h2>Bem-vindo(a) de volta!</h2>
+        <h2 id="bemVindoMsg" style="margin-bottom: 25px;"></h2>
         <p>Conta ativa • MaxPay</p>
 
         <h3 id="saldoPrincipal" class="saldo">R$ 0,00</h3>
