--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sistema MaxPay para conversão de câmbio rápida, segura e prática">
     <meta name="theme-color" content="#000000">
-    <link rel="stylesheet" href="../estilos/style.css">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>MaxPay</title>
 </head>
 <body>
@@ -21,13 +21,13 @@
                         <span></span>
                         <span></span>
                     </div>
-                    <img id="logo" src="../imagens/MaxPay-Grande(fundoPreto).png" alt="Logo MaxPay">
+                    <img id="logo" src="imagens/MaxPay-Grande(fundoPreto).png" alt="Logo MaxPay">
     <!-- Menu lateral -->
     <nav class="lateral" id="lateral">
         <ul>
-            <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="services.html">Serviços</a></li>
-            <li><a href="fac.html">Ajuda(FAQ)</a></li>
+            <li><a href="paginas/sobre.html">Sobre</a></li>
+            <li><a href="paginas/services.html">Serviços</a></li>
+            <li><a href="paginas/fac.html">Ajuda(FAQ)</a></li>
         </ul>
     </nav>
             </header>
@@ -44,17 +44,17 @@
                     Oque você deseja?
                 </h3>
                 <br>
-                <a class="botoes" href="entrar.html">Entrar</a>
+                <a class="botoes0" href="paginas/entrar.html">Entrar</a>
                 <h4>
                     ou
                 </h4>
-                <a class="botoes" href="cadastrar.html">Cadastrar</a>
+                <a class="botoes0" href="paginas/cadastrar.html">Cadastrar</a>
             </section>
         </div>
     </main>
     <footer id="rodape">
         <p>Copyright ©2025 • MaxPay | Todos os direitos reservados</p>
     </footer>
-    <script src="../scripts/scripts.js"></script>
+    <script src="scripts/scripts.js"></script>
 </body>
 </html>
