correção de bugs 3

--- a/paginas/converter.html
+++ b/paginas/converter.html
@@ -27,9 +27,9 @@
 
       <nav class="lateral" id="lateral">
         <ul>
-          <li><a href="principal.html">Painel</a></li>
+          <li><a href="principal.html">Início</a></li>
           <li><a href="pix.html">PIX</a></li>
-          <li><a href="fac.html">Ajuda</a></li>
+          <li><a href="suporte.html">Ajuda</a></li>
         </ul>
       </nav>
 
