--- a/paginas/entrar.html
+++ b/paginas/entrar.html
@@ -33,7 +33,7 @@
                         <li><a href="index.html">Início</a></li>
                         <li><a href="sobre.html">Sobre</a></li>
                         <li><a href="services.html">Serviços</a></li>
-                        <li><a href="fac.html">Ajuda (FAQ)</a></li>
+                        <li><a href="suporte.html">Ajuda (FAQ)</a></li>
                     </ul>
                 </nav>
             </header>
@@ -65,7 +65,7 @@
                 </div>
                 <p>ou</p>
                 <div id="link-cadastro$redefinir">
-                    <p>Esqueceu sua senha?  |<a href="cadastrar.html" id="cadastrar-login"> Redefinir Senha</a></p>
+                    <p>Esqueceu sua senha?  |<a href="redefinir.html" id="cadastrar-login"> Redefinir Senha</a></p>
                 </div>
             </section>
         </div>
