--- a/paginas/suporte.html
+++ b/paginas/suporte.html
@@ -52,7 +52,7 @@
         </div>
       </a>
 
-      <a href="#" class="botoes botoes-sec" target="_blank">
+      <a href="https://wa.me/5585981826610" class="botoes botoes-sec" target="_blank">
         <div class="menu-btn btn-neon">
           <h3 class="titulo-com-icone">
             <img src="../imagens/icone-whatsapp.png" class="icon-inline">
