--- a/paginas/cadastrar.html
+++ b/paginas/cadastrar.html
@@ -33,7 +33,7 @@
                         <li><a href="index.html">Início</a></li>
                         <li><a href="sobre.html">Sobre</a></li>
                         <li><a href="services.html">Serviços</a></li>
-                        <li><a href="fac.html">Ajuda (FAQ)</a></li>
+                        <li><a href="suporte.html">Ajuda (FAQ)</a></li>
                     </ul>
                 </nav>
             </header>
