--- a/paginas/pix.html
+++ b/paginas/pix.html
@@ -27,7 +27,7 @@
         <ul>
           <li><a href="principal.html">Início</a></li>
           <li><a href="services.html">Serviços</a></li>
-          <li><a href="fac.html">Ajuda (FAQ)</a></li>
+          <li><a href="suporte.html">Ajuda (FAQ)</a></li>
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="index.html">Sair (Log-out)</a></li>
         </ul>
