--- a/paginas/services.html
+++ b/paginas/services.html
@@ -29,7 +29,7 @@
         <ul>
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="services.html" class="ativo">Serviços</a></li>
-          <li><a href="fac.html">Ajuda (FAQ)</a></li>
+          <li><a href="suporte.html">Ajuda (FAQ)</a></li>
         </ul>
       </nav>
 
