adição de comentários

--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
+
 <!--Sistema criado por - Ruan Max Nunes Bertoldo.  Matrícula : 01803011-->
+
+<!-- Bom dia professor, eu tive alguns problemas durante a finalização do
+  trabalho, tanto na parte do código que foi ficando mais complexo quanto
+   com meu PC, felizmente consegui terminar o sistema até que bem dentro
+    do prazo, confesso que tive que apelar pro chat gpt em diversos
+     momentos, mas o importante é que o sistema está funcionando!-->
 
 <!DOCTYPE html>
 <html lang="pt-BR">
