--- a/paginas/principal.html
+++ b/paginas/principal.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#000000">
 
-  <!-- CSS corrigido -->
+  <!-- CSS -->
   <link rel="stylesheet" href="../estilos/style.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
         <span></span>
       </div>
 
-      <!-- Logo corrigido -->
+      <!-- Logo -->
       <img id="logo" src="../imagens/MaxPay-Grande(fundoPreto).png" alt="Logo MaxPay">
 
       <nav class="lateral" id="lateral">
@@ -129,7 +129,7 @@
 
 </main>
 
-<!-- JS corrigido -->
+<!-- JS  -->
  <script src="../scripts/saldos.js"></script>
 <script src="../scripts/scripts.js"></script>
 
