--- a/paginas/pix_pagar.html
+++ b/paginas/pix_pagar.html
@@ -30,7 +30,7 @@
                 <label class="labels">Chave PIX</label>
                 <input type="text" class="inputs" id="chavePix" placeholder="CPF/Email/Telefone/Chave Aleatória" required>
 
-                <button type="submit" id="btnConfirmarPix" class="btn-neon">
+                <button type="submit" id="btnConfirmarPix" class="botoes0">
                     Confirmar e Enviar PIX
                 </button>
             </form>
